--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
     justify-content: center;
     background-color: #ced4da;
     min-height: 100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .todo-list {
-    background-color: #edf2f4;
     width: 40vh;
 }
 
@@ -16,5 +16,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border-radius: 8px;
+    padding: 10px;
+    background-color: #edf2f4;
+    margin-top: 4px;
+}
 
+.completed {
+    text-decoration: line-through;
+    opacity: 0.4;
 }
